// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`badge settings with badges more badges available selecting an empty slot shows list with available badges 1`] = `
<div>
  <div
    class="os-card relative rounded-[5px] break-words bg-white shadow-[0px_12px_26px_-4px_rgba(0,0,0,0.1)] p-6"
  >
    <h2
      class="title"
    >
      settings.badges.name
    </h2>
     
    <p>
      settings.badges.description
    </p>
     
    <div
      class="ds-mb-small ds-mt-base badge-content"
    >
      <div
        class="presenterContainer"
      >
        <div
          class="hc-badges"
        >
          <div
            class="hc-badge-container"
            draggable="false"
          >
            <img
              class="hc-badge"
              src="/api/verification/icon"
              title="Verification description"
            />
          </div>
          <button
            class="hc-badge-container selectable"
            draggable="true"
          >
            <img
              class="hc-badge"
              src="/api/path/to/some/icon"
              title="Some description"
            />
          </button>
          <button
            class="hc-badge-container selectable selected"
            draggable="false"
          >
            <img
              class="hc-badge"
              src="/api/path/to/empty/icon"
              title="Empty"
            />
          </button>
          <button
            class="hc-badge-container selectable"
            draggable="true"
          >
            <img
              class="hc-badge"
              src="/api/path/to/third/icon"
              title="Third description"
            />
          </button>
        </div>
      </div>
       
      <p
        class="drag-instruction"
      >
        
      settings.badges.drag-instruction
    
      </p>
       
      <!---->
       
      <div>
        <strong>
          
        settings.badges.click-to-use
      
        </strong>
      </div>
       
      <!---->
       
      <div
        class="selection-info"
      >
        <h3
          class="reserve-title"
        >
          
        settings.badges.reserve-title
      
        </h3>
         
        <div
          class="badge-selection"
        >
          <button
            class="badge-selection-item"
            draggable="true"
          >
            <div
              class="badge-icon"
            >
              <img
                alt="4"
                src="/api/path/to/fourth/icon"
              />
            </div>
             
            <div
              class="badge-info"
            >
              <div
                class="badge-description"
              >
                Fourth description
              </div>
            </div>
          </button>
          <button
            class="badge-selection-item"
            draggable="true"
          >
            <div
              class="badge-icon"
            >
              <img
                alt="5"
                src="/api/path/to/fifth/icon"
              />
            </div>
             
            <div
              class="badge-info"
            >
              <div
                class="badge-description"
              >
                Fifth description
              </div>
            </div>
          </button>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`badge settings with badges no more badges available selecting an empty slot shows no more badges available message 1`] = `
<div>
  <div
    class="os-card relative rounded-[5px] break-words bg-white shadow-[0px_12px_26px_-4px_rgba(0,0,0,0.1)] p-6"
  >
    <h2
      class="title"
    >
      settings.badges.name
    </h2>
     
    <p>
      settings.badges.description
    </p>
     
    <div
      class="ds-mb-small ds-mt-base badge-content"
    >
      <div
        class="presenterContainer"
      >
        <div
          class="hc-badges"
        >
          <div
            class="hc-badge-container"
            draggable="false"
          >
            <img
              class="hc-badge"
              src="/api/verification/icon"
              title="Verification description"
            />
          </div>
          <button
            class="hc-badge-container selectable"
            draggable="true"
          >
            <img
              class="hc-badge"
              src="/api/path/to/some/icon"
              title="Some description"
            />
          </button>
          <button
            class="hc-badge-container selectable selected"
            draggable="false"
          >
            <img
              class="hc-badge"
              src="/api/path/to/empty/icon"
              title="Empty"
            />
          </button>
          <button
            class="hc-badge-container selectable"
            draggable="true"
          >
            <img
              class="hc-badge"
              src="/api/path/to/third/icon"
              title="Third description"
            />
          </button>
        </div>
      </div>
       
      <p
        class="drag-instruction"
      >
        
      settings.badges.drag-instruction
    
      </p>
       
      <p>
        
      settings.badges.no-badges-available
    
      </p>
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`badge settings with badges renders 1`] = `
<div>
  <div
    class="os-card relative rounded-[5px] break-words bg-white shadow-[0px_12px_26px_-4px_rgba(0,0,0,0.1)] p-6"
  >
    <h2
      class="title"
    >
      settings.badges.name
    </h2>
     
    <p>
      settings.badges.description
    </p>
     
    <div
      class="ds-mb-small ds-mt-base badge-content"
    >
      <div
        class="presenterContainer"
      >
        <div
          class="hc-badges"
        >
          <div
            class="hc-badge-container"
            draggable="false"
          >
            <img
              class="hc-badge"
              src="/api/verification/icon"
              title="Verification description"
            />
          </div>
          <button
            class="hc-badge-container selectable"
            draggable="true"
          >
            <img
              class="hc-badge"
              src="/api/path/to/some/icon"
              title="Some description"
            />
          </button>
          <button
            class="hc-badge-container selectable"
            draggable="false"
          >
            <img
              class="hc-badge"
              src="/api/path/to/empty/icon"
              title="Empty"
            />
          </button>
          <button
            class="hc-badge-container selectable"
            draggable="true"
          >
            <img
              class="hc-badge"
              src="/api/path/to/third/icon"
              title="Third description"
            />
          </button>
        </div>
      </div>
       
      <p
        class="drag-instruction"
      >
        
      settings.badges.drag-instruction
    
      </p>
       
      <!---->
       
      <div>
        <strong>
          
        settings.badges.click-to-select
      
        </strong>
      </div>
       
      <!---->
       
      <div
        class="selection-info"
      >
        <h3
          class="reserve-title"
        >
          
        settings.badges.reserve-title
      
        </h3>
         
        <div
          class="badge-selection"
        >
          <button
            class="badge-selection-item"
            draggable="true"
          >
            <div
              class="badge-icon"
            >
              <img
                alt="4"
                src="/api/path/to/fourth/icon"
              />
            </div>
             
            <div
              class="badge-info"
            >
              <div
                class="badge-description"
              >
                Fourth description
              </div>
            </div>
          </button>
          <button
            class="badge-selection-item"
            draggable="true"
          >
            <div
              class="badge-icon"
            >
              <img
                alt="5"
                src="/api/path/to/fifth/icon"
              />
            </div>
             
            <div
              class="badge-info"
            >
              <div
                class="badge-description"
              >
                Fifth description
              </div>
            </div>
          </button>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`badge settings without badges renders 1`] = `
<div>
  <div
    class="os-card relative rounded-[5px] break-words bg-white shadow-[0px_12px_26px_-4px_rgba(0,0,0,0.1)] p-6"
  >
    <h2
      class="title"
    >
      settings.badges.name
    </h2>
     
    <p>
      settings.badges.description
    </p>
     
    <div
      class="ds-mb-small ds-mt-base badge-content"
    >
      <div
        class="presenterContainer"
      >
        <div
          class="hc-badges"
        >
          <div
            class="hc-badge-container"
            draggable="false"
          >
            <img
              class="hc-badge"
              src="/api/verification/icon"
              title="Verification description"
            />
          </div>
        </div>
      </div>
       
      <p
        class="drag-instruction"
      >
        
      settings.badges.drag-instruction
    
      </p>
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;
